--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,80 @@
     </div>
 
 
+    <!-- blend start  -->
+    <section class="bg-[#1E1E1E] pt-6 pb-7">
+        <div class="max-w-[964px] mx-auto px-5 flex justify-between items-center">
+            <img class="max-h-4 md:max-h-8" src="./img/brend/1.png" alt="brend img">
+            <img class="max-h-4 md:max-h-8" src="./img/brend/2.png" alt="brend img">
+            <img class="max-h-4 md:max-h-8" src="./img/brend/3.png" alt="brend img">
+            <img class="max-h-4 md:max-h-8" src="./img/brend/4.png" alt="brend img">
+            <img class="max-h-4 hidden md:flex md:max-h-8" src="./img/brend/5.png" alt="brend img">
+        </div>
+    </section>
+    <!-- blend end  -->
 
+
+    <section class="bg-[#121212] py-10 md:py-14">
+        <div class="max-w-[1240px] mx-auto px-5 flex gap-10 lg:gap-0 flex-col lg:flex-row items-start ">
+            <div class="max-w-[414px]">
+                <h2 class="font-semibold text-[32px] leading-9 text-white mb-7">New Revenue Streams With Netevia
+                    Business Banking Services</h2>
+                <p class="font-medium text-sm md:text-base leading-4 md:leading-6 text-white mb-5 md:mb-6 ">Earn new
+                    residual income from your merchant's account balances, card spend, and a one-time welcome bonus on
+                    newly activated and funded accounts.</p>
+                <a class="bg-white py-2.5 px-6 inline-flex items-center gap-2 rounded-full text-sm leading-5"
+                    href="#">ISO Banking Program <img src="./img/hero/icon.svg" alt=""></a>
+            </div>
+            <img src="./img/revenue/info.svg" alt="">
+        </div>
+    </section>
+
+
+    <section class="md:pt-20 pt-10 md:pb-10 pb-5 bg-[#EFF0ED]">
+        <div class="max-w-[1200px] mx-auto px-5 bg-[#121212] text-white pt-10 md:pt-16 md:pb-20 pb-10 rounded-[30px]">
+            <div class="max-w-[960px] bg-[#121212] mx-auto">
+               <div class="md:text-center max-w-[617px] mx-auto mb-10 md:mb-[74px]">
+                <h2 class="font-semibold text-[32px] md:text-5xl leading-9 md:leading-[52px] mb-5 md:mb-6">Easy Onboarding Process of New Merchants</h2>
+                <p class="font-normal md:font-medium text-sm md:text-lg leading-7 md:mb-4 mb-5">Seamlessly onboard, underwrite, and support your merchants throughout their life cycle with our ISO
+                    Merchant Management Platform.</p>
+                <a class="bg-white text-[#121212] py-2.5 px-6 inline-flex items-center gap-2 rounded-full text-sm leading-5"
+                    href="#">Get Started<img src="./img/hero/icon.svg" alt=""></a>
+               </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-8 ">
+                    <div class="bg-[#1E1E1E] pt-8 pb-8 px-5 rounded-[22px]">
+                        <img class="mb-5" src="./img/merchants/1.svg" alt="">
+                        <h3 class="font-semibold text-[22px] leading-7 mb-3">Custom
+                            Online Application</h3>
+                        <p class="font-normal text-sm leading-4 opacity-80">Let our relationship managers
+                            create custom online application
+                            links for your agents, allowing
+                            you to sign up new merchants quickly.</p>
+                    </div>
+                    <div class="bg-[#1E1E1E] pt-8 pb-8 px-5 rounded-[22px]">
+                        <img class="mb-5" src="./img/merchants/2.svg" alt="">
+                        <h3 class="font-semibold text-[22px] leading-7 mb-3">Transparent Underwriting Process</h3>
+                        <p class="font-normal text-sm leading-4 opacity-80">With our Merchant Management Platform, you can see what stage 
+                            of the underwriting process your merchants are at and the next steps.</p>
+                    </div>
+                    <div class="bg-[#1E1E1E] pt-8 pb-8 px-5 rounded-[22px]">
+                        <img class="mb-5" src="./img/merchants/3.svg" alt="">
+                        <h3 class="font-semibold text-[22px] leading-7 mb-3">Customer 
+                            Service & Support</h3>
+                        <p class="font-normal text-sm leading-4 opacity-80">Work with a dedicated team 
+                            of customer service and tech 
+                            support reps who are constantly trained and speak multiple languages.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
 </body>
 
 </html>
